# python-project-lvl1

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
brain_games/: cli.py  engine.py  functions.py  game_even_odd.py  logger.py
brain_games/games/: __init__.py  calc.py  even_odd.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
