[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain games"
authors = ["aleksey <alekseytr89@gmail.com >"]
repository =  "https://github.com/alekseyTr/python-project-lvl1"

packages = [
  { include = "brain_games" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console"
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

